fix(cdk/overlay): not setting correct opacity in high contrast mode on Firefox (#21896)
The backdrop styles were never switches to the `cdk-high-contrast` mixin which means that
they won't work on Firefox. These changes switch to using the mixin and update the docs.

Fixes #21890.

--- a/src/cdk/overlay/_overlay.scss
+++ b/src/cdk/overlay/_overlay.scss
@@ -1,3 +1,5 @@
+@import '../a11y/a11y';
+
 // We want overlays to always appear over user content, so set a baseline
 // very high z-index for the overlay container, which is where we create the new
 // stacking context for all overlays.
@@ -84,7 +86,7 @@ $backdrop-animation-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1) !default;
       // to making it opaque using `opacity`. Note that we can't use the `cdk-high-contrast`
       // mixin, because we can't normalize the import path to the _a11y.scss both for the
       // source and when this file is distributed. See #10908.
-      @media screen and (-ms-high-contrast: active) {
+      @include cdk-high-contrast(active, off) {
         opacity: 0.6;
       }
     }
